// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`--log-level > shows debug log when passing --log-level=debug > stdout 1`] = `
[info] Initialized logger with consola options: { types:
   { silent: { level: -1 },
     fatal: { level: 0 },
     error: { level: 0 },
     warn: { level: 1 },
     log: { level: 2 },
     info: { level: 3 },
     success: { level: 3 },
     fail: { level: 3 },
     ready: { level: 3 },
     start: { level: 3 },
     box: { level: 3 },
     debug: { level: 4 },
     trace: { level: 5 },
     verbose: { level: Infinity } },
  throttle: 1000,
  throttleMin: 5,
  formatOptions: { date: false, colors: false, compact: true },
  level: 4,
  defaults: { level: 1 },
  prompt: [Function: prompt],
  reporters: [ BasicReporter {} ] }
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] <Dim>Loading configuration file from: /ROOT/test/__fixtures__/main/nadle.config.ts</BoldDim>
[log] <Dim>Using 1 worker for task execution</BoldDim>
[info] Resolved options: { sequence: false,
  logLevel: 'debug',
  showConfig: false,
  showSummary: false,
  isWorkerThread: false,
  maxWorkers: 1,
  minWorkers: 1,
  list: false,
  dryRun: false,
  stacktrace: false,
  configPath:
   '/ROOT/test/__fixtures__/main/nadle.config.ts' }
[info] Detected environments: { CI: false, TEST: true }
[info] Resolved tasks: [ hello ]
[info] Execution started
[debug] <Yellow>[Scheduler]</Yellow> transitiveDependencyGraph Map(1) { 'hello' => Set(0) {} }
[debug] <Yellow>[Scheduler]</Yellow> dependencyGraph Map(1) { 'hello' => Set(0) {} }
[info] Scheduled tasks: hello
[debug] <Yellow>[Scheduler]</Yellow> runningRoot = undefined, finishedTaskName = undefined
[debug] <Yellow>[Scheduler]</Yellow> taskName = hello, indegree = 0
[debug] <Yellow>[Scheduler]</Yellow> Next tasks = hello
[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> started

Hello from nadle!
[log] 
<Green>✓</Green> Task <Bold>hello</BoldDim> done in {duration}
[debug] <Yellow>[Scheduler]</Yellow> runningRoot = undefined, finishedTaskName = hello
[debug] <Yellow>[Scheduler]</Yellow> Next tasks = 
[info] Execution finished
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>1</BoldDim><Dim> task executed)</BoldDim>
`;

exports[`--log-level > shows error log only when passing --log-level=error > stdout 1`] = `Hello from nadle!`;

exports[`--log-level > shows info log when passing --log-level=info > stdout 1`] = `
[info] Initialized logger with consola options: { types:
   { silent: { level: -1 },
     fatal: { level: 0 },
     error: { level: 0 },
     warn: { level: 1 },
     log: { level: 2 },
     info: { level: 3 },
     success: { level: 3 },
     fail: { level: 3 },
     ready: { level: 3 },
     start: { level: 3 },
     box: { level: 3 },
     debug: { level: 4 },
     trace: { level: 5 },
     verbose: { level: Infinity } },
  throttle: 1000,
  throttleMin: 5,
  formatOptions: { date: false, colors: false, compact: true },
  level: 3,
  defaults: { level: 1 },
  prompt: [Function: prompt],
  reporters: [ BasicReporter {} ] }
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] <Dim>Loading configuration file from: /ROOT/test/__fixtures__/main/nadle.config.ts</BoldDim>
[log] <Dim>Using 1 worker for task execution</BoldDim>
[info] Resolved options: { sequence: false,
  logLevel: 'info',
  showConfig: false,
  showSummary: false,
  isWorkerThread: false,
  maxWorkers: 1,
  minWorkers: 1,
  list: false,
  dryRun: false,
  stacktrace: false,
  configPath:
   '/ROOT/test/__fixtures__/main/nadle.config.ts' }
[info] Detected environments: { CI: false, TEST: true }
[info] Resolved tasks: [ hello ]
[info] Execution started
[info] Scheduled tasks: hello
[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> started

Hello from nadle!
[log] 
<Green>✓</Green> Task <Bold>hello</BoldDim> done in {duration}
[info] Execution finished
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>1</BoldDim><Dim> task executed)</BoldDim>
`;
